# hyperworld

./: .gitignore  CMakeLists.txt  ContextWrapper.h  Entity.h  GhostCamera.h  HyperSvdSolver.h  HyperWorld.sln  Model.h  ModelBank.h  ModelBuilder.h  README.md  README.txt  RenderContext.h  RenderNode.h  Scene.h  ShaderInterface.h  SimpleRenderNode.h  SimpleSpawner.h  Tessellation.h  Texture.h  TextureBank.h  TextureData.h  TextureLoader.cpp  TextureLoader.h  UserInput.h  VectorMath.cpp  VectorMath.h  WindowWrapper.h  glad.c  main.cpp  planning.txt
HyperWorld/: ContextWrapper.h  GhostCamera.h  HyperWorld.vcxproj  HyperWorld.vcxproj.filters  Model.h  ModelBank.h  ModelBuilder.h  RenderContext.h  ShaderInterface.h  Texture.h  TextureBank.h  TextureData.h  TextureLoader.cpp  TextureLoader.h  UserInput.h  VectorMath.h  WindowWrapper.h  glad.c  main.cpp
src/: CMakeLists.txt  ContextWrapper.h  Entity.h  GhostCamera.h  Model.h  ModelBank.h  ModelBuilder.h  RenderContext.h  RenderNode.h  Scene.h  ShaderInterface.h  ShaderProgram.h  ShaderProgramBank.h  ShaderProgramData.h  ShaderProgramLoader.h  SimpleRenderNode.h  SimpleSpawner.h  Tessellation.h  Texture.h  TextureBank.h  TextureData.h  TextureLoader.cpp  TextureLoader.h  VectorMath.cpp  VectorMath.h  WindowWrapper.h  glad.h  main.cpp
src/shaders/: hyperbolic.frag  spherical.frag  spherical.vert
win-x64-shared/: README.md
win-x64-static/: .gitignore  README.md  rebuild.sh  setup_script.sh
